--- a/src/main/resources/templates/viewperson.html
+++ b/src/main/resources/templates/viewperson.html
@@ -1,83 +1,185 @@
 <!DOCTYPE>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout" 
-xmlns:sec="http://www.thymeleaf.org/extras/spring-security" layout:decorator="layout" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+	layout:decorator="layout" lang="en">
 <head>
 <title>Users : View</title>
-<link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css}"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet"
+	th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css}"
+	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+	crossorigin="anonymous">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+	rel="stylesheet">
+<style>
+.material-icons {
+	color: white !important;
+	margin-right: 3%;
+}
+
+.create-user-form {
+	width: 74%;
+}
+
+.select-user-form {
+	width: 36%;
+}
+
+.submit-create-user-form {
+	margin-left: 36%;
+	margin-top: 5%;
+}
+
+.input-submit-create-user {
+	width: 15%;
+}
+</style>
 </head>
 <body>
-
-	
-   	<div th:if="${person.role.name == 'ROLE_ADMIN'}">
-		<div th:replace="adminmenu :: header"> </div>  
-    </div>
-    <div th:if="${person.role.name == 'ROLE_USER'}">
-		<div th:replace="usermenu :: header"> </div>  
-	</div> 
-    <div layout:fragment="content" class="container">
-        <div class="alert alert-success" th:if="${globalMessage}" th:text="${globalMessage}">Some Success message</div>        
-        <div th:if="${viewperson.endDate == null}">
-        <dl>
-            <dt>ID</dt>
-            <dd id="id" th:text="${viewperson.id}">123</dd>
-            <dt>Username</dt>
-            <dd id="username" th:text="${viewperson.user}">Username</dd>
-            <dt>Name</dt>
-            <dd id="name" th:text="${viewperson.name}">Name</dd>
-            <dt>Lastname 1</dt>
-            <dd id="lastname1" th:text="${viewperson.lastname1}">Lastname 1</dd>
-            <dt>Lastname 2</dt>
-            <dd id="lastname2" th:text="${viewperson.lastname2}">Lastname 2</dd>
-            <dt>DNI</dt>
-            <dd id="dni" th:text="${viewperson.dni}">DNI</dd>
-            <dt>Email</dt>
-            <dd id="email" th:text="${viewperson.email}">Email</dd>
-            <dt>Start Date</dt>
-            <dd id="created" th:text="${#calendars.format(#calendars.createForTimeZone(#dates.year(viewperson.startDate), #dates.month(viewperson.startDate), #dates.day(viewperson.startDate),'UTC'), 'yyyy-MMM-dd')}">July 11, 2012 2:17:16 PM CDT</dd>
-            <dt>End Date</dt>
-            <dd id="ended"></dd>
-            <dt>Role</dt>
-            <dd id="role" th:text="${viewperson.role.name}">Role</dd>
-            <dt>Projects</dt>
-		    <dd th:each="project: ${projects}"
-		            th:value="${project.id}"
-		            th:text="${project.name}"></dd>
-        </dl>
-        </div>
-        <div th:if="${viewperson.endDate != null}">
-        <dl>
-            <dt>ID</dt>
-            <dd id="id" th:text="${viewperson.id}">123</dd>
-            <dt>Username</dt>
-            <dd id="username" th:text="${viewperson.user}">Username</dd>
-            <dt>Name</dt>
-            <dd id="name" th:text="${viewperson.name}">Name</dd>
-            <dt>Lastname 1</dt>
-            <dd id="lastname1" th:text="${viewperson.lastname1}">Lastname 1</dd>
-            <dt>Lastname 2</dt>
-            <dd id="lastname2" th:text="${viewperson.lastname2}">Lastname 2</dd>
-            <dt>DNI</dt>
-            <dd id="dni" th:text="${viewperson.dni}">DNI</dd>
-            <dt>Email</dt>
-            <dd id="email" th:text="${viewperson.email}">Email</dd>
-            <dt>Start Date</dt>
-            <dd id="created" th:text="${#calendars.format(#calendars.createForTimeZone(#dates.year(viewperson.startDate), #dates.month(viewperson.startDate), #dates.day(viewperson.startDate),'UTC'), 'yyyy-MMM-dd')}">July 11, 2012 2:17:16 PM CDT</dd>
-            <dt>End Date</dt>
-            <dd id="ended" th:text="${#calendars.format(#calendars.createForTimeZone(#dates.year(viewperson.endDate), #dates.month(viewperson.endDate), #dates.day(viewperson.endDate),'UTC'), 'yyyy-MMM-dd')}">July 11, 2012 2:17:16 PM CDT</dd>
-            <dt>Role</dt>
-            <dd id="role" th:text="${viewperson.role.name}">Role</dd>
-            <dt>Projects</dt>
-		    <dd th:each="project: ${projects}"
-		            th:value="${project.id}"
-		            th:text="${project.name}"></dd>
-        </dl>
-        </div>
-        <div th:if="${person.role.name == 'ROLE_ADMIN'}">
-	        <div class="pull-left">
-	            <a href="persons" th:href="@{'/person/delete/' + ${viewperson.id}}"> Delete </a> | <a href="formperson.html" th:href="@{'/person/viewmodify/' + ${viewperson.id}}"> Modify </a>
-	        </div>
-        </div>
-    </div>
+	<div th:if="${person.role.name == 'ROLE_ADMIN'}">
+		<div th:replace="adminmenu :: header"></div>
+	</div>
+	<div th:if="${person.role.name == 'ROLE_USER'}">
+		<div th:replace="usermenu :: header"></div>
+	</div>
+	<div layout:fragment="content" class="container">
+		<div class="alert alert-success" th:if="${globalMessage}"
+			th:text="${globalMessage}">Some Success message</div>
+		<div th:if="${viewperson.endDate == null}">
+			<dl>
+				<div class="row">
+					<div class="col form-group">
+						<dt>ID</dt>
+						<dd id="id" th:text="${viewperson.id}">123</dd>
+					</div>
+					<div class="col form-group">
+						<dt>Username</dt>
+						<dd id="username" th:text="${viewperson.user}">Username</dd>
+					</div>
+					<div class="col form-group">
+						<dt>Name</dt>
+						<dd id="name" th:text="${viewperson.name}">Name</dd>
+					</div>
+					<div class="col form-group">
+						<dt>Lastname 1</dt>
+						<dd id="lastname1" th:text="${viewperson.lastname1}">Lastname
+							1</dd>
+					</div>
+					<div class="col form-group">
+						<dt>Lastname 2</dt>
+						<dd id="lastname2" th:text="${viewperson.lastname2}">Lastname
+							2</dd>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col form-group">
+						<dt>DNI</dt>
+						<dd id="dni" th:text="${viewperson.dni}">DNI</dd>
+					</div>
+					<div class="col form-group">
+						<dt>Email</dt>
+						<dd id="email" th:text="${viewperson.email}">Email</dd>
+					</div>
+					<div class="col form-group">
+						<dt>Start Date</dt>
+						<dd id="created"
+							th:text="${#calendars.format(#calendars.createForTimeZone(#dates.year(viewperson.startDate), #dates.month(viewperson.startDate), #dates.day(viewperson.startDate),'UTC'), 'yyyy-MMM-dd')}">July
+							11, 2012 2:17:16 PM CDT</dd>
+					</div>
+					<div class="col form-group">
+						<dt>End Date</dt>
+						<dd id="ended"></dd>
+					</div>
+					<div class="col form-group">
+						<dt>Role</dt>
+						<dd id="role" th:text="${viewperson.role.name}">Role</dd>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col form-group">
+						<dt>Projects</dt>
+						<dd th:each="project: ${projects}" th:value="${project.id}"
+							th:text="${project.name}"></dd>
+					</div>
+				</div>
+			</dl>
+		</div>
+		<div th:if="${viewperson.endDate != null}">
+			<dl>
+				<div class="row">
+					<div class="col form-group">
+						<dt>ID</dt>
+						<dd id="id" th:text="${viewperson.id}">123</dd>
+					</div>
+					<div class="col form-group">
+						<dt>Username</dt>
+						<dd id="username" th:text="${viewperson.user}">Username</dd>
+					</div>
+					<div class="col form-group">
+						<dt>Name</dt>
+						<dd id="name" th:text="${viewperson.name}">Name</dd>
+					</div>
+					<div class="col form-group">
+						<dt>Lastname 1</dt>
+						<dd id="lastname1" th:text="${viewperson.lastname1}">Lastname
+							1</dd>
+					</div>
+					<div class="col form-group">
+						<dt>Lastname 2</dt>
+						<dd id="lastname2" th:text="${viewperson.lastname2}">Lastname
+							2</dd>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col form-group">
+						<dt>DNI</dt>
+						<dd id="dni" th:text="${viewperson.dni}">DNI</dd>
+					</div>
+					<div class="col form-group">
+						<dt>Email</dt>
+						<dd id="email" th:text="${viewperson.email}">Email</dd>
+					</div>
+					<div class="col form-group">
+						<dt>Start Date</dt>
+						<dd id="created"
+							th:text="${#calendars.format(#calendars.createForTimeZone(#dates.year(viewperson.startDate), #dates.month(viewperson.startDate), #dates.day(viewperson.startDate),'UTC'), 'yyyy-MMM-dd')}">July
+							11, 2012 2:17:16 PM CDT</dd>
+					</div>
+					<div class="col form-group">
+						<dt>End Date</dt>
+						<dd id="ended"
+							th:text="${#calendars.format(#calendars.createForTimeZone(#dates.year(viewperson.endDate), #dates.month(viewperson.endDate), #dates.day(viewperson.endDate),'UTC'), 'yyyy-MMM-dd')}">July
+							11, 2012 2:17:16 PM CDT</dd>
+					</div>
+					<div class="col form-group">
+						<dt>Role</dt>
+						<dd id="role" th:text="${viewperson.role.name}">Role</dd>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col form-group">
+						<dt>Projects</dt>
+						<dd th:each="project: ${projects}" th:value="${project.id}"
+							th:text="${project.name}"></dd>
+					</div>
+				</div>
+			</dl>
+		</div>
+		<div th:if="${person.role.name == 'ROLE_ADMIN'}">
+			<div class="col form-actions col-xs-offset-2 col-xs-10 submit-create-user-form">
+				<button class="btn btn-primary input-submit-create-user">
+					<a href="formperson.html"
+						th:href="@{'/person/viewmodify/' + ${viewperson.id}}"> <span
+						class="material-icons">mode_edit</span></a>
+				</button>
+				<button class="btn btn-primary input-submit-create-user">
+					<a href="persons" th:href="@{'/person/delete/' + ${viewperson.id}}">
+						<span class="material-icons md-36">delete</span>
+					</a>
+				</button>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
