--- a/src/main/resources/templates/viewproject.html
+++ b/src/main/resources/templates/viewproject.html
@@ -1,57 +1,133 @@
 <!DOCTYPE>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout" 
-xmlns:sec="http://www.thymeleaf.org/extras/spring-security" layout:decorator="layout" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+	layout:decorator="layout" lang="en">
 <head>
 <title>Projects : View</title>
+<link rel="stylesheet"
+	th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css}"
+	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+	crossorigin="anonymous" />
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+	rel="stylesheet" />
+<style>
+.material-icons {
+	color: white !important;
+	margin-right: 3%;
+}
+
+.create-user-form {
+	width: 74%;
+}
+
+.select-user-form {
+	width: 36%;
+}
+
+.submit-create-user-form {
+	margin-left: 36%;
+	margin-top: 5%;
+}
+
+.input-submit-create-user {
+	width: 15%;
+}
+</style>
 </head>
 <body>
-    <div th:if="${person.role.name == 'ROLE_ADMIN'}">
-		<div th:replace="adminmenu :: header"> </div>  
-    </div>
-    <div th:if="${person.role.name == 'ROLE_USER'}">
-		<div th:replace="usermenu :: header"> </div>  
-	</div> 
-    <div layout:fragment="content" class="container">
-        <div class="alert alert-success" th:if="${globalMessage}" th:text="${globalMessage}">Some Success message</div>
-        <div th:if="${viewproject.endDate == null}">
-        <dl>
-            <dt>ID</dt>
-            <dd id="id" th:text="${viewproject.id}">123</dd>
-            <dt>Name</dt>
-            <dd id="name" th:text="${viewproject.name}">Name</dd>
-            <dt>Description</dt>
-            <dd id="lastname1" th:text="${viewproject.description}">Description</dd>            
-            <dt>Start Date</dt>
-            <dd id="created" th:text="${#calendars.format(#calendars.createForTimeZone(#dates.year(viewproject.startDate), #dates.month(viewproject.startDate), #dates.day(viewproject.startDate),'UTC'), 'yyyy-MMM-dd')}">July 11, 2012 2:17:16 PM CDT</dd>            
-            <dt>Users</dt>
-		    <dd th:each="person : ${persons}"
-		            th:value="${person.id}"
-		            th:text="${person.name} + ' ' + ${person.lastname1} + ' ' + ${person.lastname2}"></dd>
-        </dl>
-        </div>
-        <div th:if="${viewproject.endDate != null}">
-        <dl>
-            <dt>ID</dt>
-            <dd id="id" th:text="${viewproject.id}">123</dd>
-            <dt>Name</dt>
-            <dd id="name" th:text="${viewproject.name}">Name</dd>
-            <dt>Description</dt>
-            <dd id="lastname1" th:text="${viewproject.description}">Description</dd>            
-            <dt>Start Date</dt>
-            <dd id="created" th:text="${#calendars.format(#calendars.createForTimeZone(#dates.year(viewproject.startDate), #dates.month(viewproject.startDate), #dates.day(viewproject.startDate),'UTC'), 'yyyy-MMM-dd')}">July 11, 2012 2:17:16 PM CDT</dd>
-            <dt>End Date</dt>
-            <dd id="ended" th:text="${#calendars.format(#calendars.createForTimeZone(#dates.year(viewproject.endDate), #dates.month(viewproject.endDate), #dates.day(viewproject.endDate),'UTC'), 'yyyy-MMM-dd')}">July 11, 2012 2:17:16 PM CDT</dd>            
-            <dt>Users</dt>
-		    <dd th:each="person : ${persons}"
-		            th:value="${person.id}"
-		            th:text="${person.name} + ' ' + ${person.lastname1} + ' ' + ${person.lastname2}"></dd>            
-        </dl>
-        </div>
-        <div th:if="${person.role.name == 'ROLE_ADMIN'}">
-	        <div class="pull-left">
-	            <a href="projects" th:href="@{'/project/delete/' + ${viewproject.id}}"> Delete </a> | <a href="formproject.html" th:href="@{'/project/modify/' + ${viewproject.id}}"> Modify </a>
-	        </div>
-        </div>
-    </div>
+	<div th:if="${person.role.name == 'ROLE_ADMIN'}">
+		<div th:replace="adminmenu :: header"></div>
+	</div>
+	<div th:if="${person.role.name == 'ROLE_USER'}">
+		<div th:replace="usermenu :: header"></div>
+	</div>
+	<div layout:fragment="content" class="container">
+		<div class="alert alert-success" th:if="${globalMessage}"
+			th:text="${globalMessage}">Some Success message</div>
+		<div th:if="${viewproject.endDate == null}">
+			<dl>
+				<div class="row">
+					<div class="col form-group">
+						<dt>ID</dt>
+						<dd id="id" th:text="${viewproject.id}">123</dd>
+					</div>
+					<div class="col form-group">
+						<dt>Name</dt>
+						<dd id="name" th:text="${viewproject.name}">Name</dd>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col form-group">
+						<dt>Description</dt>
+						<dd id="lastname1" th:text="${viewproject.description}">Description</dd>
+					</div>
+					<div class="col form-group">
+						<dt>Start Date</dt>
+						<dd id="created"
+							th:text="${#calendars.format(#calendars.createForTimeZone(#dates.year(viewproject.startDate), #dates.month(viewproject.startDate), #dates.day(viewproject.startDate),'UTC'), 'yyyy-MMM-dd')}">July
+							11, 2012 2:17:16 PM CDT</dd>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col form-group">
+						<dt>Users</dt>
+						<dd th:each="person : ${persons}" th:value="${person.id}"
+							th:text="${person.name} + ' - ' + ${person.name} + ' ' + ${person.lastname1} + ' ' + ${person.lastname2}"></dd>
+					</div>
+				</div>
+			</dl>
+		</div>
+		<div th:if="${viewproject.endDate != null}">
+			<dl>
+				<div class="row">
+					<div class="col form-group">
+						<dt>ID</dt>
+						<dd id="id" th:text="${viewproject.id}">123</dd>
+					</div>
+					<div class="col form-group">
+						<dt>Name</dt>
+						<dd id="name" th:text="${viewproject.name}">Name</dd>
+					</div>
+					<div class="col form-group">
+						<dt>Description</dt>
+						<dd id="lastname1" th:text="${viewproject.description}">Description</dd>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col form-group">
+						<dt>Start Date</dt>
+						<dd id="created"
+							th:text="${#calendars.format(#calendars.createForTimeZone(#dates.year(viewproject.startDate), #dates.month(viewproject.startDate), #dates.day(viewproject.startDate),'UTC'), 'yyyy-MMM-dd')}">July
+							11, 2012 2:17:16 PM CDT</dd>
+					</div>
+					<div class="col form-group">
+						<dt>End Date</dt>
+						<dd id="ended"
+							th:text="${#calendars.format(#calendars.createForTimeZone(#dates.year(viewproject.endDate), #dates.month(viewproject.endDate), #dates.day(viewproject.endDate),'UTC'), 'yyyy-MMM-dd')}">July
+							11, 2012 2:17:16 PM CDT</dd>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col form-group">
+						<dt>Users</dt>
+						<dd th:each="person : ${persons}" th:value="${person.id}"
+							th:text="${person.user} + ' - ' + ${person.name} + ' ' + ${person.lastname1} + ' ' + ${person.lastname2}"></dd>
+					</div>
+				</div>
+			</dl>
+		</div>
+		<div th:if="${person.role.name == 'ROLE_ADMIN'}">
+			<div class="pull-left">
+				<a href="formproject.html"
+					th:href="@{'/project/viewmodify/' + ${project.id}}"> <span
+						class="material-icons">mode_edit</span></a>|
+				<a href="persons"
+					th:href="@{'/project/delete/' + ${project.id}}"> <span
+						class="material-icons md-36">delete</span></a>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
