--- a/src/main/resources/templates/viewperson.html
+++ b/src/main/resources/templates/viewperson.html
@@ -9,9 +9,9 @@
 <link rel="stylesheet"
 	th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css}"
 	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-	crossorigin="anonymous">
+	crossorigin="anonymous" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-	rel="stylesheet">
+	rel="stylesheet" />
 <style>
 .material-icons {
 	color: white !important;
